# pup

./: .gitignore  AGENT.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  package.json
.github/workflows/: ci.yml
crates/pup-claude/: Cargo.toml
crates/pup-claude/src/: discovery.rs  injector.rs  inspector.rs  lib.rs  session.rs  transcript.rs
crates/pup-claude/tests/: integration_test.rs
crates/pup-core/: Cargo.toml
crates/pup-core/src/: channel.rs  discovery.rs  lib.rs  render.rs  router.rs  session.rs  types.rs
crates/pup-daemon/: Cargo.toml
crates/pup-daemon/src/: config.rs  main.rs  setup.rs  tracing_setup.rs
crates/pup-ipc/: Cargo.toml
crates/pup-ipc/src/: client.rs  lib.rs  protocol.rs
crates/pup-telegram/: Cargo.toml
crates/pup-telegram/src/: bot.rs  dm.rs  lib.rs  outbox.rs  render.rs  streaming.rs  topics.rs  turn_tracker.rs  whisper.rs
daemon/: Cargo.toml
daemon/crates/pup-core/src/: backend.rs  discovery.rs  lib.rs  render.rs  types.rs
daemon/crates/pup-daemon/: Cargo.toml
daemon/crates/pup-daemon/src/: config.rs  main.rs
daemon/crates/pup-ipc/src/: client.rs  protocol.rs
daemon/crates/pup-telegram/: Cargo.toml
daemon/crates/pup-telegram/src/: lib.rs  outbox.rs  render.rs
docs/: ARCHITECTURE.md  claude-code-bun-inspect-injection.md  claude-code-extension-integration-plan.md  claude-code-session-integration-plan.md  display-mode-plan.md
extension/: index.ts
scripts/: install-hooks.sh  restart-pi.sh  restart-pup.sh  restart.sh
scripts/hooks/: pre-push
tests/e2e/: E2E_CLAUDE.md  E2E_TESTS.md  mock_extension.py  run_e2e.sh  tg.py
