[package]
name = "pup-claude"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures = { workspace = true }
pup-core = { path = "../pup-core" }
pup-ipc = { path = "../pup-ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.26"
tracing = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
