[package]
name = "pup-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
pup-ipc = { path = "../pup-ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
