[package]
name = "pup-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pup"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
pup-claude = { path = "../pup-claude" }
pup-core = { path = "../pup-core" }
pup-telegram = { path = "../pup-telegram" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
