[package]
name = "pup-telegram"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
audiopus = "0.2.0"
ogg = "0.9.2"
pup-core = { path = "../pup-core" }
pup-ipc = { path = "../pup-ipc" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whisper-rs = "0.15.1"
